IDK why categories shows subcategories with idCategory Null, but, it works.
Added a new column in Product to store images.

Added a thymeleaf interface teamplate, with some examples without sense.

Added scripts and Boostrap to make the interface responsive
