# src/main/java/es/proyecto/app/controller/PagesController.java
@@ -1,0 +1,31 @@
+package es.proyecto.app.controller;
+
+import es.proyecto.app.service.CategoriesService;
+import es.swagger.codegen.models.Category;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+
+import java.util.List;
+
+@Slf4j
+@Controller
+public class PagesController {
+
+    @Autowired
+    private CategoriesService categoriesService;
+
+    @GetMapping("/")
+    public String getIndexPage(Model model) {
+        // Recuperar categorías y subcategorías desde el servicio
+        List<Category> categories = categoriesService.getAllCategories();
+
+        // Añadir categorías al modelo para Thymeleaf
+        model.addAttribute("categories", categories);
+
+        // Retornar el nombre de la plantilla Thymeleaf
+        return "index"; // Thymeleaf buscará src/main/resources/templates/index.html
+    }
+}
